# LingoSummarApi

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 3ca00fe35daa_initial_tables.py  97e65d8c3651_use_timezone_aware_timestamps.py
app/: __init__.py  config.py  database.py  main.py
app/api/: deps.py  router.py
app/api/endpoints/: health.py  summarize.py  texts.py
app/models/: __init__.py  models.py  summary.py  text.py
app/routes/: routes.py
app/schemas/: __init__.py  summary.py  text.py
app/services/: summary_service.py  text_service.py
app/summarizer/: __init__.py  clustering.py  engine.py  feature_extraction.py  fuzzy_logic.py  helpers.py  models.py  preprocessing.py  rules.py  textClasses.py  text_summarizer.py  tree.txt
app/summarizer/resources/: input-text.txt  reference-text.txt
app/summarizer/utils/: helpers.py
app/utils/: file_handler.py  helpers.py
instance/: database.db
tests/: __init__.py  conftest.py  test_health.py  test_summarize.py  test_texts.py
uploads/: Manchester_offer.docx
